--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,15 +17,16 @@ variables:
   tag: '$(Build.BuildId)'
 
 pool:
- name: 'new'
+ name: 'sep29'
+
+
 stages:
 - stage: Build
   displayName: Build and push stage
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: $(vmImageName)
+
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
