--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,3 +37,16 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+
+- stage: start
+  displayName: start
+  jobs:
+  - job: start
+    displayName: start
+
+    steps:
+    - task: Docker@2
+      displayName: Build and push an image to container registry
+      inputs:
+        containerRegistry: 'devopsazurerepo'
+        command: 'start'
