Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,6 @@ stages:
         # Run docker-compose up in the appropriate directory
         - script: |
             cd /home/azureuser/docker  # Replace with the actual path where your docker-compose.yml is located
-            docker-compose -f docker-compose.yml up -d  # Run docker-compose to start the containers
+            docker compose  up -d  # Run docker-compose to start the containers
           displayName: Run Docker Compose
 
